--- a/src/features/Generator/GeneratorPage.module.css
+++ b/src/features/Generator/GeneratorPage.module.css
@@ -50,8 +50,46 @@
   color: #201b10;
 }
 
-.error {
-  color: #e12d39;
+.doneContainer,
+.errorContainer {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.buttonsRow {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+
+.buttonGap {
+  width: 10px;
+}
+
+.doneText {
   margin-top: 16px;
-  font-size: 16px;
+  font-size: 35px;
+  color: #201b10;
+}
+
+.retryButton {
+  color: #ffffff;
+  font-size: 35px;
+  border: none;
+  border-radius: 10px;
+  cursor: pointer;
+  background-color: #ff5f00;
+  padding: 16px 32px;
+  transition: opacity 0.2s;
+}
+
+.retryButton:hover {
+  opacity: 0.9;
+}
+
+.errorText {
+  margin-top: 16px;
+  font-size: 35px;
+  color: #ff5f00;
 }
