--- a/src/components/HistoryEntryItem/HistoryEntryItem.module.css
+++ b/src/components/HistoryEntryItem/HistoryEntryItem.module.css
@@ -25,7 +25,7 @@
 .fileInfo {
   display: flex;
   align-items: center;
-  gap: 40px;
+  gap: 20px;
   flex: 1;
 }
 
@@ -41,6 +41,7 @@
   overflow: hidden;
   text-overflow: ellipsis;
   white-space: nowrap;
+  margin-right: 60px;
 }
 
 .date {
